# bta_paper

./: .gitignore  README.md  appendix_detailed_experimental_design.tex
GCB/: offline_gcab_drawer.py  offline_gcab_drawer_button.py  offline_gcb_analogy_script.py  requirements.txt
GCB/environments/: environment_init.py
GCB/environments/four_rooms/: __init__.py  four_rooms_wrapper.py
GCB/extension/: inspect_checkpoint.py  offline_gcab_four_rooms.py  offline_gcab_four_rooms_vision.py
GCB/extension/scripts/: four_rooms_state.sh  four_rooms_vision.sh  inspect_checkpoint.sh  smoke_test_state_four_rooms.py
GCB/extension/state_gcab/: encoders.py  environment.py  eval.py  goalbisim.py  pairedstategoal.py  replaybuffer.py  trainer.py  transforms.py
boolean_composition/: .gitignore  README.MD  README.md  pyproject.toml
boolean_composition/boxman_dts/: trainer.py
boolean_composition/boxman_dts/gym_repoman/envs/: collect_env.py
boolean_composition/boxman_sts/: dqn.py  exp_returns.py  plots.py  trainer.py
boolean_composition/boxman_sts/extension/: exp_convergence.py  exp_convergence_old.py  make_plots.py  plot_utils.py  test_uvfa_composition.py
boolean_composition/boxman_sts/extension/scripts/: eval_exp_conv.sh  make_plots.sh  run_exp_conv_eval.sh  run_exp_conv_parallel.sh  run_exp_convergence.sh  run_exp_convergence_old.sh  run_tests.sh
boolean_composition/boxman_sts/gym_repoman/envs/: collect_env.py
boolean_composition/four_rooms/: GridWorld.py  composition.py  config.py  exp1.py  exp2.py  exp3.py  exp4.py  exp5.py  library.py  plots.py
boolean_composition/four_rooms/extension/: exp1.py  exp2_comparison.py  exp_convergence.py  exp_learning_time.py  exp_train.py  exp_train_all_tasks.py  plot_comparison.py  plot_utils.py  plots.py  utils.py
boolean_composition/rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
skill_machines/: ql.py  sb3_utils.py  sm.py  sm_ql.py
skill_machines/extension/: __init__.py  exp_convergence.py  exp_convergence_old.py  tests.py
(+34 files in other folders)
