[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl"
version = "0.1.0"
description = "Boolean composition experiments with reinforcement learning"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "boolean.py",
    "certifi",
    "cloudpickle",
    "cycler",
    "decorator",
    "deepdish>=0.3.7",
    "funcsigs",
    "future",
    "gym==0.25.2",
    "imageio",
    "Keras-Applications",
    "Keras-Preprocessing",
    "kiwisolver",
    "matplotlib",
    "mock",
    "numexpr",
    "numpy<2.0.0",
    "olefile",
    "opencv-python>=4.11.0.86",
    "pandas",
    "pbr",
    "Pillow",
    "pygame",
    "pyglet",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "scipy",
    "seaborn",
    "shutilwhich",
    "six",
    "tables",
    "tempdir",
    "torch",
    "torchvision",
    "tornado",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/yourusername/boolean_composition"
Repository = "https://github.com/yourusername/boolean_composition.git"
Issues = "https://github.com/yourusername/boolean_composition/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["venv*", "tests*", "*.egg-info*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
